@@ -1,6 +1,8 @@
 munin (work)
 
   * Plugin: Added plugin generic/dhcpd3, created by Rune N. Skillingstad.
+  * Plugin: Patch generic/bind9 to report "unnamed" as "other" (Nicolas 
+    Stransky).
 
 munin (1.1.8)
 
